feat: user registration using transaction
